--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: #fafafa;
-
+  font-family: sans-serif;
 }
 
 .grid {
@@ -39,10 +39,24 @@ h1,
 h2 {
   color: #ba2d65;
   text-align: center;
-  font-family: sans-serif;
 }
 
-.menuButtons {
+h3 {
+  color: #ba2d65;
+  text-align: center;
+  font-size: 3em;
+  margin-top: 0px;
+  margin-bottom: 15px;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 15px;
+}
+
+.buttons {
   display: flex;
   flex-direction: column;
 }
@@ -51,5 +65,4 @@ h2 {
   margin: auto;
   display: flex;
   justify-content: center;
-  margin-top: 10px;
 }
