--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,11 @@
 
 body {
   background-color: #fafafa;
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+  margin: 0px;
 }
 
 .grid {
@@ -32,19 +36,32 @@ body {
 }
 
 .cell:hover {
-  background: #ff94c2;
+  background: #ffc1e3;
 }
 
-h1,
-h2 {
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+h1 {
   color: #ba2d65;
-  text-align: center;
+  font-size: 3rem;
+}
+
+h2 {
+  color: black;
+  font-size: 1rem;
+  font-style: italic;
 }
 
 h3 {
   color: #ba2d65;
-  text-align: center;
-  font-size: 3em;
+  text-align: left;
+  font-size: 4vmax;
   margin-top: 0px;
   margin-bottom: 15px;
 }
@@ -53,7 +70,7 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 15px;
+  margin-right: 35px;
 }
 
 .buttons {
