--- a/src/index.css
+++ b/src/index.css
@@ -2,41 +2,13 @@
   --borderColor: #ffffff;
 }
 
-body {
-  background-color: #fafafa;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 * {
   margin: 0px;
 }
 
-.grid {
-  border-left: solid var(--borderColor) 1px;
-  border-top: solid var(--borderColor) 1px;
-  display: table;
-}
-
-.cell {
-  box-sizing: border-box;
-  width: 25px;
-  height: 25px;
-  border-right: solid var(--borderColor) 1px;
-  border-bottom: solid var(--borderColor) 1px;
-  display: block;
-  float: left;
-}
-
-.live {
-  background-color: #ba2d65;
-}
-
-.dead {
-  background-color: #E6E0DA;
-}
-
-.cell:hover {
-  background: #ffc1e3;
+body {
+  background-color: #fafafa;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .title {
@@ -45,6 +17,8 @@ body {
   align-items: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #ba2d65;
 }
 
 h1 {
@@ -66,20 +40,49 @@ h3 {
   margin-bottom: 15px;
 }
 
-.menu {
+.grid {
+  border-left: solid var(--borderColor) 1px;
+  border-top: solid var(--borderColor) 1px;
+  margin-bottom: 15px;
+  display: table;
+}
+
+.cell {
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  border-right: solid var(--borderColor) 1px;
+  border-bottom: solid var(--borderColor) 1px;
+  display: block;
+  float: left;
+}
+
+.live {
+  background-color: #ba2d65;
+}
+
+.dead {
+  background-color: #E6E0DA;
+}
+
+.cell:hover {
+  background: #ffc1e3;
+}
+
+.container {
+  width: 1000px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 35px;
+  margin: auto;
+}
+
+.menu {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .buttons {
   display: flex;
-  flex-direction: column;
-}
-
-.container {
-  margin: auto;
-  display: flex;
-  justify-content: center;
 }
